--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.2
 MarkupSafe==1.1.1
+PyMySQL==0.9.3
 pyserial==3.4
 python-dateutil==2.8.1
 python-dotenv==0.13.0
