--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
 pytz==2019.3
+simplejson==3.17.0
 six==1.14.0
 SQLAlchemy==1.3.16
 tzlocal==2.0.0
