--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==1.4.2
+aniso8601==8.0.0
 APScheduler==3.6.3
 click==7.1.1
 Flask==1.1.2
 Flask-Migrate==2.5.3
+Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
